// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test fn \`Err\` should create \`Err\` result 1`] = `
RustlikeResult {
  "_error": "Some error message",
  "_type": "err",
  "_value": undefined,
}
`;

exports[`Test fn \`Err\` should create \`Err\` result 2`] = `
RustlikeResult {
  "_error": "Some error message",
  "_type": "err",
  "_value": undefined,
}
`;

exports[`Test fn \`Err\` should create \`Err\` result 3`] = `
RustlikeResult {
  "_error": "Some error message",
  "_type": "err",
  "_value": undefined,
}
`;

exports[`Test fn \`Ok\` should create \`Ok\` result 1`] = `
RustlikeResult {
  "_error": undefined,
  "_type": "ok",
  "_value": 1,
}
`;

exports[`Test fn \`Ok\` should create \`Ok\` result 2`] = `
RustlikeResult {
  "_error": undefined,
  "_type": "ok",
  "_value": 1,
}
`;

exports[`Test fn \`Ok\` should create \`Ok\` result 3`] = `
RustlikeResult {
  "_error": undefined,
  "_type": "ok",
  "_value": 2,
}
`;
